about fix & font fix on smaller phones

--- a/styles/_about.scss
+++ b/styles/_about.scss
@@ -90,3 +90,12 @@
     max-width: 80%;
   }
 }
+
+@media only screen and (max-width: 370px) {
+
+  
+
+  .aboutText {
+    display: none;
+  }
+}
