--- a/styles/style.scss
+++ b/styles/style.scss
@@ -122,11 +122,25 @@ button:focus {
   transform: translateY(0px);
 }
 
+@media only screen and (max-width: 400px) {
+  html{
+    font-size: 11px;
+  };
+  h1 {
+    font-size: 5rem;
+  }
+  h2 {
+    font-size: 3rem;
+  }
+  
+
+}
 
 @media only screen and (min-width: 576px) {
   html{
     font-size: 15px;
   };
+  
 
 }
 
